@@ -364,4 +364,4 @@ See http://sg.danny.cz/sg/tools.html
 
 
 Doug Gilbert
-15th October 2009
+12th February 2010
