@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2008 Christophe Varoqui and Douglas Gilbert.
+ * Copyright (c) 2004-2010 Christophe Varoqui and Douglas Gilbert.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -48,7 +48,7 @@
  * to the given SCSI device.
  */
 
-static char * version_str = "1.13 20080513";
+static char * version_str = "1.14 20100210";
 
 #define REPORT_TGT_GRP_BUFF_LEN 1024
 
@@ -56,6 +56,7 @@ static char * version_str = "1.13 20080513";
 #define TPGS_STATE_NONOPTIMIZED 0x1
 #define TPGS_STATE_STANDBY 0x2
 #define TPGS_STATE_UNAVAILABLE 0x3
+#define TPGS_STATE_LB_DEPENDENT 0x4
 #define TPGS_STATE_OFFLINE 0xe          /* SPC-4 rev 9 */
 #define TPGS_STATE_TRANSITIONING 0xf
 
@@ -154,6 +155,9 @@ static void decode_tpgs_state(const int st)
         break;
     case TPGS_STATE_UNAVAILABLE:
         printf(" (unavailable)");
+        break;
+    case TPGS_STATE_LB_DEPENDENT:
+        printf(" (logical block dependent)");
         break;
     case TPGS_STATE_OFFLINE:
         printf(" (offline)");
@@ -294,6 +298,7 @@ int main(int argc, char * argv[])
 
             printf("    T_SUP : %d, ", !!(ucp[1] & 0x80));
             printf("O_SUP : %d, ", !!(ucp[1] & 0x40));
+            printf("LBD_SUP : %d, ", !!(ucp[1] & 0x10));
             printf("U_SUP : %d, ", !!(ucp[1] & 0x08));
             printf("S_SUP : %d, ", !!(ucp[1] & 0x04));
             printf("AN_SUP : %d, ", !!(ucp[1] & 0x02));
